--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Jokes API</title>
+<title>Quotes API</title>
 <link rel="stylesheet" href="style.css">    
 </head>
 <body>
@@ -13,7 +13,7 @@
 <div class="container">
     <div class="box">
         <div class="quote" id="getquote">"Quotes are comming soon"</div>
-        <p><cite id="author">kapil</cite></p>
+        <p><cite id="author">....</cite></p>
         <div><button id="btn">Next</button></div>
     </div>
 </div>
